--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#re-render {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+}
+#map {
+    height: 100%;
+}
