--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,15 @@ code {
 #map {
     height: 100%;
 }
+
+.map-overlay {
+    position: absolute;
+    z-index: 100;
+    background-color: rgba(255, 255, 255, 0.7);
+    left: 0;
+    right: 0;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
